<resources>
    <string name="app_name">LMS</string>
    <string name="csetitle">CSE Books</string>
    <string name="search_hint">Search Books</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">E-Library</string>
    <string name="nav_header_subtitle">bhuvaneswari.ias@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cse">CSE Books</string>
    <string name="menu_eee">EEE Books</string>
    <string name="menu_ece">ECE Books</string>
    <string name="menu_civil">CIVIL Books</string>
    <string name="menu_mech">MECH Books</string>
    <string name="menu_logout">Logout</string>
</resources>
